calendar layout bug fixes for FF

--- a/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
@@ -9,13 +9,11 @@
 }
 
 .CalendarWidget {
-    flex-grow: 0;
-    display: flex;
-    flex-direction: column;
+
+    @apply --flex-column;
     position: relative;
     border-spacing: 0;
     font-weight: 200;
-    max-width: 45em;
 
     & > header { margin-bottom: 1em; }
 
@@ -91,10 +89,14 @@
 
 /* Calendar View */
 
-.CalendarWidget-view {
+.CalendarWidget-view,
+.Calendar-view-substitution {
     flex: 1;
-    display: flex;
-    flex-direction: column;
+    @apply --flex-column;
+}
+
+.CalendarWidget-view {
+    max-height: 30rem;
 }
 
 /*
@@ -125,9 +127,8 @@ Header
 }
 
 .CalendarWidget-view-day {
-    display: flex;
-    flex-direction: column;
     flex: 1;
+    @apply --flex-column;
 }
 
 .CalendarWidget-view-day-title {
@@ -154,11 +155,11 @@ Main Content
 */
 
 .CalendarWidget-view-main {
-    position: relative;
     flex: 1;
+    @apply --flex-column;
     border: 1px solid var(--calendar-line--strong);
     background-color: var(--bg);
-    display: flex;
+
 
     & .Scrollview-transform {
         flex: none;
